k8s/01-namespace_app.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: app1
    name: app1
  name: app1
