k8s/03-FE-svc.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
      app: app-dep1
    name: app-svc
    namespace: app1
spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: app-dep1
    type: ClusterIP
